--- a/src/shared/view/input/index.module.css
+++ b/src/shared/view/input/index.module.css
@@ -9,6 +9,10 @@
   border: 1px solid var(--surface-border);
   border-radius: 4px;
 
+  &::placeholder {
+    color: var(--text-note);
+  }
+
   &:focus {
     outline-color: var(--accent);
   }
