--- a/src/shared/view/button/index.module.css
+++ b/src/shared/view/button/index.module.css
@@ -1,27 +1,34 @@
 .button {
   display: inline-flex;
-  gap: 7px;
+  gap: 8px;
   align-items: center;
   justify-content: center;
+  width: fit-content;
   height: 44px;
+  padding-inline: 17px;
+  border: none;
   border-radius: 4px;
+
+  &:focus {
+    outline: none;
+  }
 
   &[data-kind='outline'] {
     color: var(--accent);
     background: transparent;
     border: 1px solid var(--accent);
 
-    &:hover {
+    &:hover, &:focus {
       color: var(--accent-faded);
       border-color: var(--accent-faded);
     }
   }
 
-  &[data-kind='filed'] {
+  &[data-kind='filled'] {
     color: var(--text-secondary);
     background: var(--accent);
 
-    &:hover {
+    &:hover, &:focus {
       background-color: var(--accent-faded);
     }
   } 
