feat(lib): add stepper

--- a/src/shared/view/button/index.module.css
+++ b/src/shared/view/button/index.module.css
@@ -21,6 +21,7 @@
     &:hover, &:focus {
       color: var(--accent-faded);
       border-color: var(--accent-faded);
+      box-shadow: var(--surface-shadow) 0 0 0 6px;
     }
   }
 
