--- a/src/shared/assets/colours.css
+++ b/src/shared/assets/colours.css
@@ -8,9 +8,11 @@
   --success: oklch(57.35% 0.144 146.12);
   --surface-border: oklch(0% 0 0 / 16%);
   --surface-overlay: oklch(0% 0 0 / 16%);
+  --surface-shadow: oklch(56.04% 0.235 274.96 / 15%);
   --accent: oklch(56.04% 0.235 274.96);
   --accent-faded: oklch(49.93% 0.206 275.02);
   --text-primary: oklch(32.11% 0 0);
   --text-secondary: oklch(100% 0 0);
   --text-link: var(--accent);
+  --text-note: oklch(0% 0 0 / 48%);
 }
