--- a/src/shared/assets/colours.css
+++ b/src/shared/assets/colours.css
@@ -4,8 +4,8 @@
   --surface: oklch(0% 0 0 / 4%);
   --surface-divider: oklch(0% 0 0 / 8%);
   --surface-regular: oklch(91.34% 0.031 254.32);
-  --failure: oklch(57.35% 0.154 29.65);
-  --success: oklch(57.35% 0.144 146.12);
+  --failure: oklch(57.35% 0.154 29.65 / 15%);
+  --success: oklch(57.35% 0.144 146.12 / 15%);
   --surface-border: oklch(0% 0 0 / 16%);
   --surface-overlay: oklch(0% 0 0 / 16%);
   --surface-shadow: oklch(56.04% 0.235 274.96 / 15%);
