--- a/src/shared/view/button/index.module.css
+++ b/src/shared/view/button/index.module.css
@@ -9,6 +9,11 @@
   border: none;
   border-radius: 4px;
 
+  & svg {
+    width: 24px;
+    height: 24px;
+  }
+
   &:focus {
     outline: none;
   }
