--- a/src/pages/signup/step/aboutme/finally/index.module.css
+++ b/src/pages/signup/step/aboutme/finally/index.module.css
@@ -2,12 +2,15 @@
   width: 460px;
   height: 314px;
   padding: 34px;
+  background: var(--bg-secondary);
+  border-radius: 12px;
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 25px;
 
   &.is_success {
     justify-content: center;
@@ -25,39 +28,54 @@
   width: 28px;
   height: 28px;
   background: var(--surface);
+  border: none;
   border-radius: 9999px;
 
   & svg {
-    width: 11px;
-    height: 11px;
+    width: 16px;
+    height: 16px;
   }
 }
 
 .content {
   display: flex;
+  align-items: center;
   justify-content: center;
+  height: 132px;
+  margin-bottom: 23px;
 }
 
 .indicator {
   position: relative;
-  width: 38px;
-  height: 38px;
+  z-index: 3;
+  width: 39px;
+  height: 39px;
 }
 
-.indicator::before {
+.icon_wrapper {
+  position: relative;
+}
+
+.icon_wrapper::after {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 45%;
+  right: -20px;
+  display: block;
+  width: 80px;
+  height: 80px;
   content: '';
-  background: var(--surface);
+  background: var(--success);
   border-radius: 9999px;
+  transform: translateY(-50%);
+
+  [data-type='fail']& {
+    background: var(--failure);
+  }
 }
 
 .footer {
   text-align: end;
-
+  
   &[data-type='success'] {
     text-align: center;
   }
