--- a/src/pages/started/index.module.css
+++ b/src/pages/started/index.module.css
@@ -2,6 +2,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (width <= 576px) {
+    display: block;
+    padding-inline: 25px;
+  }
 }
 
 .card {
@@ -10,6 +15,12 @@ body {
   padding: 26px 25px;
   background: var(--bg-secondary);
   border-radius: 12px;
+
+  @media (width <= 992px) {
+    width: 100%;
+    height: 504px;
+    padding-inline: 45px;
+  }
 }
 
 .header {
@@ -34,6 +45,7 @@ body {
 
 .socials {
   display: flex;
+  flex-wrap: wrap;
   gap: 18px;
   align-items: center;
   
