--- a/src/shared/view/select/index.module.css
+++ b/src/shared/view/select/index.module.css
@@ -35,6 +35,7 @@
   padding-block: 4px;
   border-radius: 4px;
   box-shadow: 0 4px 20px var(--surface-border);
+  background: var(--bg-secondary);
 
   &.is_popover {
     width: 100%;
