--- a/src/shared/assets/index.css
+++ b/src/shared/assets/index.css
@@ -1,2 +1,15 @@
 @import url('./colours.css');
 @import url('./reset.css');
+
+@font-face {
+  font-family: "SB Sans";
+  font-weight: 100 900;
+  font-stretch: 75% 112.5%;
+  src: url(./SBSansInterface.woff2) format("woff2");
+  font-display: swap;
+}
+
+body {
+  font-family: "SB Sans Interface", sans-serif;
+  font-size: 14px;
+}
