--- a/src/shared/lib/modal/backdrop.module.css
+++ b/src/shared/lib/modal/backdrop.module.css
@@ -26,6 +26,10 @@
   transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.paper {
+  display: block;
+}
+
 .paper-enter .layer {
   opacity: 0%;
 }
