--- a/src/pages/multi-step-form/step/advantages/index.module.css
+++ b/src/pages/multi-step-form/step/advantages/index.module.css
@@ -1,12 +1,18 @@
-
 .form {
-  max-width: 336px;
+  width: 100%;
+  height: 433px;
+  overflow-y: auto;
 }
 
 .fieldset {
-  display: flex;
-  flex-direction: column;
+  max-width: 336px;
   border: none;
+}
+
+.elements {
+  display: grid;
+  gap: 28px;
+  letter-spacing: 0.4px;
 }
 
 .footer {
