--- a/src/shared/view/avatar/index.module.css
+++ b/src/shared/view/avatar/index.module.css
@@ -9,6 +9,11 @@
   user-select: none;
   border-radius: 9999px;
 
+  @media (width <= 768px) {
+    width: 60px;
+    height: 60px;
+  }
+
   & img {
     width: 100%;
     height: 100%;
@@ -26,5 +31,10 @@
     font-weight: 500;
     line-height: 1;
     background: var(--surface-regular);
+
+    @media (width <= 768px) {
+      font-size: 30px;
+    }
+  
   }
 }
