--- a/src/shared/view/select/index.module.css
+++ b/src/shared/view/select/index.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 300px;
+  width: 100%;
   height: 44px;
   padding-inline: 10px;
   color: var(--text-note);
