--- a/src/application/application.css
+++ b/src/application/application.css
@@ -3,3 +3,16 @@
 body {
   background: var(--bg-base);
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--bg-secondary);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--surface);
+  border-radius: 10px;
+}
