--- a/src/shared/layouts/stepform/index.module.css
+++ b/src/shared/layouts/stepform/index.module.css
@@ -17,6 +17,7 @@ body {
   width: 900px;
   height: 821px;
   padding: 62px 112px;
+  margin-top: 24px;
   background: var(--bg-secondary);
   border-radius: 24px;
 
