fix: add handle click to close button

--- a/src/shared/lib/stepper/index.module.css
+++ b/src/shared/lib/stepper/index.module.css
@@ -22,10 +22,12 @@
   border-radius: 9999px;
 
   &.is_completed {
+    color: var(--accent);
     background: var(--accent);
   }
 
   &.is_active {
+    color: var(--accent);
     background: var(--accent);
 
     &::before {
