--- a/src/shared/assets/index.css
+++ b/src/shared/assets/index.css
@@ -3,13 +3,13 @@
 
 @font-face {
   font-family: "SB Sans";
-  font-weight: 100 900;
+  font-weight: 100 800;
   font-stretch: 75% 112.5%;
-  src: url(./SBSansInterface.woff2) format("woff2");
+  src: url(/SBSansInterface.woff2) format("woff2");
   font-display: swap;
 }
 
 body {
-  font-family: "SB Sans Interface", sans-serif;
+  font-family: "SB Sans", sans-serif;
   font-size: 14px;
 }
